java/target/generated-sources/antlr4/SlideDeckMLParser.java
// Generated from SlideDeckML.g4 by ANTLR 4.13.1
package slidedeckml.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SlideDeckMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, MLSTR=106, STR=107, FLOAT=108, 
		INT=109, ID=110, LINE_COMMENT=111, BLOCK_COMMENT=112, WS=113, BOM=114;
	public static final int
		RULE_file = 0, RULE_deckDecl = 1, RULE_deckItem = 2, RULE_headDecl = 3, 
		RULE_headProp = 4, RULE_templateDecl = 5, RULE_templateProp = 6, RULE_layoutDecl = 7, 
		RULE_layoutKind = 8, RULE_layoutZone = 9, RULE_area = 10, RULE_slideDecl = 11, 
		RULE_slideFrontProp = 12, RULE_transitionValue = 13, RULE_transitionObjProp = 14, 
		RULE_slideBodyItem = 15, RULE_slotDecl = 16, RULE_markdownDecl = 17, RULE_elementDecl = 18, 
		RULE_elementType = 19, RULE_elementProp = 20, RULE_positionDecl = 21, 
		RULE_absolutePosition = 22, RULE_relativePosition = 23, RULE_animationDecl = 24, 
		RULE_animationKind = 25, RULE_unit = 26, RULE_anchorType = 27, RULE_align = 28, 
		RULE_imageFit = 29, RULE_equationDisplayMode = 30, RULE_stepDecl = 31, 
		RULE_stepItem = 32, RULE_range = 33, RULE_valueList = 34, RULE_value = 35, 
		RULE_array = 36, RULE_obj = 37, RULE_number = 38, RULE_bool = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "deckDecl", "deckItem", "headDecl", "headProp", "templateDecl", 
			"templateProp", "layoutDecl", "layoutKind", "layoutZone", "area", "slideDecl", 
			"slideFrontProp", "transitionValue", "transitionObjProp", "slideBodyItem", 
			"slotDecl", "markdownDecl", "elementDecl", "elementType", "elementProp", 
			"positionDecl", "absolutePosition", "relativePosition", "animationDecl", 
			"animationKind", "unit", "anchorType", "align", "imageFit", "equationDisplayMode", 
			"stepDecl", "stepItem", "range", "valueList", "value", "array", "obj", 
			"number", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'deck'", "'{'", "'}'", "'head'", "'theme'", "';'", "'title'", 
			"'author'", "'exportFilename'", "'mdc'", "'defaults'", "'template'", 
			"'cssPath'", "'assetsDir'", "'logoPaths'", "'['", "']'", "'layout'", 
			"'kind'", "'zones'", "'STRUCTURED'", "'FLEX'", "'FREE'", "'zone'", "'role'", 
			"'defaultOrder'", "'HEADER'", "'CONTENT'", "'LEFT'", "'RIGHT'", "'FOOTER'", 
			"'CANVAS'", "'slide'", "'class'", "'transition'", "'notes'", "'|'", "':'", 
			"'slot'", "'markdown'", "'element'", "'type'", "'TextBlock'", "'ListBlock'", 
			"'ImageElement'", "'VideoElement'", "'CodeBlock'", "'EquationBlock'", 
			"'content'", "'ordered'", "'src'", "'altText'", "'fit'", "'autoplay'", 
			"'loop'", "'muted'", "'controls'", "'language'", "'displayMode'", "'latexSource'", 
			"'zIndex'", "'slotOf'", "'position'", "'absolute'", "'x'", "'y'", "'width'", 
			"'height'", "'unit'", "'anchor'", "'relative'", "'alignX'", "'alignY'", 
			"'orderInZone'", "'inZone'", "'animation'", "'delayMs'", "'durationMs'", 
			"'APPEAR'", "'FADE_IN'", "'FADE_IN_SLIDE_IN'", "'ZOOM_IN'", "'PERCENT'", 
			"'PX'", "'TOP_LEFT'", "'TOP_CENTER'", "'CENTER'", "'BOTTOM_CENTER'", 
			"'BOTTOM_RIGHT'", "'START'", "'END'", "'CONTAIN'", "'COVER'", "'STRETCH'", 
			"'INLINE'", "'BLOCK'", "'step'", "'reveal'", "'codeReveal'", "'switch'", 
			"'show'", "'..'", "','", "'true'", "'false'", null, null, null, null, 
			null, null, null, null, "'\\uFEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "MLSTR", 
			"STR", "FLOAT", "INT", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "BOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SlideDeckML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SlideDeckMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public DeckDeclContext deckDecl() {
			return getRuleContext(DeckDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SlideDeckMLParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			deckDecl();
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeckDeclContext extends ParserRuleContext {
		public Token deckName;
		public TerminalNode STR() { return getToken(SlideDeckMLParser.STR, 0); }
		public List<DeckItemContext> deckItem() {
			return getRuleContexts(DeckItemContext.class);
		}
		public DeckItemContext deckItem(int i) {
			return getRuleContext(DeckItemContext.class,i);
		}
		public DeckDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deckDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitDeckDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeckDeclContext deckDecl() throws RecognitionException {
		DeckDeclContext _localctx = new DeckDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_deckDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__0);
			setState(84);
			((DeckDeclContext)_localctx).deckName = match(STR);
			setState(85);
			match(T__1);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8590200848L) != 0)) {
				{
				{
				setState(86);
				deckItem();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeckItemContext extends ParserRuleContext {
		public HeadDeclContext headDecl() {
			return getRuleContext(HeadDeclContext.class,0);
		}
		public TemplateDeclContext templateDecl() {
			return getRuleContext(TemplateDeclContext.class,0);
		}
		public LayoutDeclContext layoutDecl() {
			return getRuleContext(LayoutDeclContext.class,0);
		}
		public SlideDeclContext slideDecl() {
			return getRuleContext(SlideDeclContext.class,0);
		}
		public DeckItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deckItem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitDeckItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeckItemContext deckItem() throws RecognitionException {
		DeckItemContext _localctx = new DeckItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_deckItem);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				headDecl();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				templateDecl();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				layoutDecl();
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				slideDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadDeclContext extends ParserRuleContext {
		public List<HeadPropContext> headProp() {
			return getRuleContexts(HeadPropContext.class);
		}
		public HeadPropContext headProp(int i) {
			return getRuleContext(HeadPropContext.class,i);
		}
		public HeadDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitHeadDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadDeclContext headDecl() throws RecognitionException {
		HeadDeclContext _localctx = new HeadDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_headDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__3);
			setState(101);
			match(T__1);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4000L) != 0)) {
				{
				{
				setState(102);
				headProp();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadPropContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<SlideFrontPropContext> slideFrontProp() {
			return getRuleContexts(SlideFrontPropContext.class);
		}
		public SlideFrontPropContext slideFrontProp(int i) {
			return getRuleContext(SlideFrontPropContext.class,i);
		}
		public HeadPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headProp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitHeadProp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadPropContext headProp() throws RecognitionException {
		HeadPropContext _localctx = new HeadPropContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_headProp);
		int _la;
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(T__4);
				setState(111);
				value();
				setState(112);
				match(T__5);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(T__6);
				setState(115);
				value();
				setState(116);
				match(T__5);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				match(T__7);
				setState(119);
				value();
				setState(120);
				match(T__5);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				match(T__8);
				setState(123);
				value();
				setState(124);
				match(T__5);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				match(T__9);
				setState(127);
				value();
				setState(128);
				match(T__5);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				match(T__10);
				setState(131);
				match(T__1);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 120259346560L) != 0)) {
					{
					{
					setState(132);
					slideFrontProp();
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateDeclContext extends ParserRuleContext {
		public Token templateName;
		public TerminalNode ID() { return getToken(SlideDeckMLParser.ID, 0); }
		public List<TemplatePropContext> templateProp() {
			return getRuleContexts(TemplatePropContext.class);
		}
		public TemplatePropContext templateProp(int i) {
			return getRuleContext(TemplatePropContext.class,i);
		}
		public TemplateDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitTemplateDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateDeclContext templateDecl() throws RecognitionException {
		TemplateDeclContext _localctx = new TemplateDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_templateDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__11);
			setState(142);
			((TemplateDeclContext)_localctx).templateName = match(ID);
			setState(143);
			match(T__1);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 57344L) != 0)) {
				{
				{
				setState(144);
				templateProp();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplatePropContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValueListContext valueList() {
			return getRuleContext(ValueListContext.class,0);
		}
		public TemplatePropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateProp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitTemplateProp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplatePropContext templateProp() throws RecognitionException {
		TemplatePropContext _localctx = new TemplatePropContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_templateProp);
		int _la;
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(T__12);
				setState(153);
				value();
				setState(154);
				match(T__5);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(T__13);
				setState(157);
				value();
				setState(158);
				match(T__5);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				match(T__14);
				setState(161);
				match(T__15);
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1 || _la==T__15 || ((((_la - 104)) & ~0x3f) == 0 && ((1L << (_la - 104)) & 127L) != 0)) {
					{
					setState(162);
					valueList();
					}
				}

				setState(165);
				match(T__16);
				setState(166);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayoutDeclContext extends ParserRuleContext {
		public Token layoutName;
		public TerminalNode ID() { return getToken(SlideDeckMLParser.ID, 0); }
		public LayoutKindContext layoutKind() {
			return getRuleContext(LayoutKindContext.class,0);
		}
		public List<LayoutZoneContext> layoutZone() {
			return getRuleContexts(LayoutZoneContext.class);
		}
		public LayoutZoneContext layoutZone(int i) {
			return getRuleContext(LayoutZoneContext.class,i);
		}
		public LayoutDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitLayoutDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutDeclContext layoutDecl() throws RecognitionException {
		LayoutDeclContext _localctx = new LayoutDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_layoutDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__17);
			setState(170);
			((LayoutDeclContext)_localctx).layoutName = match(ID);
			setState(171);
			match(T__1);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(172);
				match(T__18);
				setState(173);
				layoutKind();
				setState(174);
				match(T__5);
				}
			}

			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(178);
				match(T__19);
				setState(179);
				match(T__1);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__23) {
					{
					{
					setState(180);
					layoutZone();
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				match(T__2);
				}
			}

			setState(189);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayoutKindContext extends ParserRuleContext {
		public LayoutKindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutKind; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitLayoutKind(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutKindContext layoutKind() throws RecognitionException {
		LayoutKindContext _localctx = new LayoutKindContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_layoutKind);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LayoutZoneContext extends ParserRuleContext {
		public Token zoneName;
		public AreaContext area() {
			return getRuleContext(AreaContext.class,0);
		}
		public TerminalNode ID() { return getToken(SlideDeckMLParser.ID, 0); }
		public TerminalNode INT() { return getToken(SlideDeckMLParser.INT, 0); }
		public LayoutZoneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutZone; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitLayoutZone(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutZoneContext layoutZone() throws RecognitionException {
		LayoutZoneContext _localctx = new LayoutZoneContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_layoutZone);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(T__23);
			setState(194);
			((LayoutZoneContext)_localctx).zoneName = match(ID);
			setState(195);
			match(T__1);
			setState(196);
			match(T__24);
			setState(197);
			area();
			setState(198);
			match(T__5);
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(199);
				match(T__25);
				setState(200);
				match(INT);
				setState(201);
				match(T__5);
				}
			}

			setState(204);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AreaContext extends ParserRuleContext {
		public AreaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_area; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SlideDeckMLVisitor ) return ((SlideDeckMLVisitor<? extends T>)visitor).visitArea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AreaContext area() throws RecognitionException {
		AreaContext _localctx = new AreaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_area);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8455716864L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
